feat: 优化响应式样式

--- a/旧轨还乡.md
+++ b/旧轨还乡.md
@@ -2,7 +2,7 @@
 title: 旧轨还乡
 time: "2025-03-30"
 category: 散文
-author: 杭州市丁兰实验中学910班 张潇冉
+author: 张潇冉
 details: 姥姥姥爷牵着我，踏上一趟绿皮火车，自杭州启程，摇晃过二十五小时，直达内蒙古乌兰察布。
 cover: images/旧轨还乡.png
 ---
