feat: 通过构建时数据加载，自动将文章数据生成好

--- a/旧轨还乡.md
+++ b/旧轨还乡.md
@@ -5,6 +5,7 @@ category: 散文
 author: 张潇冉
 details: 姥姥姥爷牵着我，踏上一趟绿皮火车，自杭州启程，摇晃过二十五小时，直达内蒙古乌兰察布。
 cover: images/旧轨还乡.png
+isFeatured: true
 ---
 
 # 旧轨还乡
