feat: 优化文章详情页样式

--- a/心向暖阳，少年无畏风霜.md
+++ b/心向暖阳，少年无畏风霜.md
@@ -4,7 +4,7 @@ time: "2025-03-31"
 category: 议论文
 author: AI
 details: 姥姥姥爷牵着我，踏上一趟绿皮火车，自杭州启程，摇晃过二十五小时，直达内蒙古乌兰察布。
-cover: images/book.jpg
+cover: https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
 isFeatured: true
 ---
 
@@ -14,7 +14,11 @@ isFeatured: true
 
 成长，是困境中沉淀的蜕变。“苔花如米小，也学牡丹开”，袁枚笔下的苔花，即便生长于阴暗潮湿的角落，没有牡丹的娇艳与瞩目，却依然努力绽放，展现自己的生命光彩。江梦南便是一朵这样的“苔花”，半岁时因药物导致失聪，无声的世界是巨大困境。但她没有自怨自艾，而是默默沉淀。通过读唇语学会“听”和“说”，付出比常人多无数倍的努力求学，从无声中突围，最终考入清华大学念博士 ，完成了令人惊叹的人生蜕变。困境是成长的隐匿关卡，少年们在困境中默默沉淀，如同破茧前的蝶蛹，积蓄力量，等待破茧成蝶、惊艳世界的那一刻。
 
+![夏日槐树](https://images.unsplash.com/photo-1533038590840-1cde6e668a91?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80)
+
 成长，是挫折中汲取奋进力量的过程。“古之立大志者，不惟有超世之才，亦必有坚韧不拔之志。”苏轼之言道尽挫折与奋进的关联。苏翊鸣在追逐滑雪梦想的道路上，摔过无数跤，受过多次伤。14岁那年，他在训练中意外受伤，锁骨骨折。可伤痛没有成为他的阻碍，伤好后迅速投入训练，从挫折中汲取经验。凭借这股奋进力量，在2022年北京冬奥会斩获单板滑雪男子大跳台金牌，惊艳世界。挫折是成长的催化剂，心向暖阳的少年，能从挫折中凝聚奋进的力量，让自己的羽翼更加丰满。
+
+> "树犹如此，人何以堪。"看着老槐树年复一年地经历着生命的轮回，我不禁想起这句古语。树有四季，人有悲欢，这本是自然之理。
 
 成长，是逐梦路上执着前行的跋涉。“千淘万漉虽辛苦，吹尽狂沙始到金。”刘禹锡道出逐梦的艰辛与执着的意义。外卖小哥雷海为热爱诗词，送外卖的忙碌生活没能磨灭他的梦想。他利用零碎时间背诗、学诗，哪怕旁人不理解，哪怕生活条件艰苦，也未曾放弃。在《中国诗词大会》的舞台上，他击败北大硕士彭敏夺冠，实现了自己的诗词梦。逐梦的道路或许荆棘丛生，但执着的少年总能心向暖阳，无惧艰难险阻，向着梦想不断迈进。    回首来路，那些困境、挫折与艰难，都成为了成长的注脚，镌刻下我们坚定的足迹。前方或许仍有风霜，但只要我们心向暖阳，便能将其化作前行的力量，让生命绽放出最耀眼的光芒。
 
