--- a/心向暖阳，少年无畏风霜.md
+++ b/心向暖阳，少年无畏风霜.md
@@ -3,9 +3,8 @@ title: 心向暖阳，少年无畏风霜
 time: "2025-03-31"
 category: 议论文
 author: AI
-details: 姥姥姥爷牵着我，踏上一趟绿皮火车，自杭州启程，摇晃过二十五小时，直达内蒙古乌兰察布。
+details: 心若暖阳，无畏风霜；心怀希望，勇往直前。少年的征程是星辰大海，哪怕道阻且长，也能凭借内心的光，驱散阴霾，奔赴理想。
 cover: https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
-isFeatured: true
 ---
 
 # 心向暖阳，少年无畏风霜
