--- a/时光列车.md
+++ b/时光列车.md
@@ -3,9 +3,8 @@ title: 时光列车
 time: "2025-03-30"
 category: 散文
 author: AI
-details: 姥姥姥爷牵着我，踏上一趟绿皮火车，自杭州启程，摇晃过二十五小时，直达内蒙古乌兰察布。
+details: 童年的记忆如同一列缓缓驶过的绿皮火车，载着我们穿越时光的隧道，驶向那些被遗忘的角落。
 cover: images/book.jpg
-isFeatured: true
 ---
 
 # 时光列车
