--- a/相信未来.md
+++ b/相信未来.md
@@ -14,7 +14,9 @@ isFeatured: true
 
 我依然固执地铺平失望的灰烬
 
-用美丽的雪花写下：相信未来
+用美丽的雪花写下：**相信未来**
+
+<br>
 
 当我的紫葡萄化为深秋的露水
 
@@ -22,7 +24,9 @@ isFeatured: true
 
 我依然固执地用凝霜的枯藤
 
-在凄凉的大地上写下：相信未来
+在凄凉的大地上写下：**相信未来**
+
+<br>
 
 我要用手指那涌向天边的排浪
 
@@ -30,7 +34,9 @@ isFeatured: true
 
 摇曳着曙光那枝温暖漂亮的笔杆
 
-用孩子的笔体写下：相信未来
+用孩子的笔体写下：**相信未来**
+
+<br>
 
 我之所以坚定地相信未来
 
