feat: 给故事添加音频

--- a/月亮馅饼的秘密.md
+++ b/月亮馅饼的秘密.md
@@ -5,6 +5,7 @@ category: 童话故事
 author: xxch
 details: 森林里住着三只可爱的小动物：总爱做甜点的小兔子绒绒、擅长爬树的小狐狸豆豆，还有力气最大的小浣熊壮壮。他们住在同一棵大橡树下，树洞里藏着大家共同的秘密基地。
 cover: images/月亮馅饼的秘密.jpg
+audio: audios/月亮馅饼的秘密.mp3
 isFeatured: true
 ---
 
