--- a/小刺猬的金色果实.md
+++ b/小刺猬的金色果实.md
@@ -10,6 +10,8 @@ isFeatured: true
 
 # 小刺猬的金色果实
 
+小朋友你好呀，我是大家都喜欢的大头强啊，最近森林里发生的一件十分有趣的故事，快来让我给你讲一讲吧，这个故事的名字叫《小刺猬的金色果实》。
+
 秋天的森林好像被打翻的颜料罐，枫叶像火一样红艳，银杏叶像阳光一样金灿灿的。一阵风吹过，仿佛下起了一场蝴蝶雨。小刺猬果果蹲坐在栗子树下，它背上的尖刺已经挂满了圆滚滚的栗子，就像一座会移动的小山丘一样。
 
 “果果真棒！”路过的兔子朵朵竖起长耳朵夸赞着，“你收集果实的本领，就连松鼠阿松都比不了呢！”果果害羞地缩了缩脖子，鼻尖还沾着栗子壳的绒毛。她最喜欢秋天了，因为她背上的尖刺就是最好的“篮子”，能帮她收集整个森林的甜蜜果实——有酸甜的山楂、香香的橡果，还有枝头沉甸甸的柿子。
@@ -37,3 +39,5 @@ isFeatured: true
 “其实没有尖刺也没关系呀。”果果看着朋友们被火炉映红的笑脸，突然发现自己的心里长出了比尖刺更坚硬的东西——那是朋友们手拉手围成的圆圈，是分享时暖融融的心跳，即使冬天再漫长，也不会害怕的勇气。
 
 窗外的雪花还在轻轻的飘落，小刺猬的尖刺慢慢长好了，但她知道，比起用刺背回的果实，那些和朋友一起收集果实的日子，才是藏在心底最珍贵的宝藏。
+
+好了，小朋友今天的故事就讲到这里了，希望你也能和果果一起，在秋天的森林里，用自己的手和朋友一起收集美味的果实，让秋天的果实，带给你最美好的回忆。
